# BazCoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  Makefile.am  SECURITY.md  configure.ac  libbazcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  bazcoin.sln  bazcoin_config.h  libsecp256k1_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  bazcoin-cli.bash-completion  bazcoin-qt.pro  bazcoin-tx.bash-completion  bazcoind.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  bazcoin-conf.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  bazcoin-cli.1  bazcoin-qt.1  bazcoin-tx.1  bazcoin-wallet.1  bazcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  (+115 more)
(+729 files in other folders)
