dist_man1_MANS=

if BUILD_BAZCOIND
  dist_man1_MANS+=bazcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bazcoin-qt.1
endif

if BUILD_BAZCOIN_CLI
  dist_man1_MANS+=bazcoin-cli.1
endif

if BUILD_BAZCOIN_TX
  dist_man1_MANS+=bazcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BAZCOIN_WALLET
  dist_man1_MANS+=bazcoin-wallet.1
endif
endif
